Cherry-pick d02501613445. rdar://171101490

REGRESSION (303091@main): getClientRects() can include rects with no width and height
    https://bugs.webkit.org/show_bug.cgi?id=308175
    <rdar://problem/170681795>

    Reviewed by Antti Koivisto.

    303091@main introduced inline box construction for visually empty lines (see the example in that revision).
    As a result, these empty inline boxes are now exposed through geometry APIs such as getClientRects().
    However, this behavior differs from other engines and from WebKit's shipping behavior.
    Although these empty inline boxes are necessary for determining enclosing geometries, they can -and should- be excluded when collecting results for geometry APIs.
    (Note that we only omit zero rects where both height and width are 0).

    Test: fast/inline/empty-inline-box-bounding-rect.html

    * LayoutTests/fast/block/inside-inlines/getClientRects-on-inline-box-missing-entry-expected.txt:
    * LayoutTests/fast/inline/empty-inline-box-bounding-rect-expected.txt: Added.
    * LayoutTests/fast/inline/empty-inline-box-bounding-rect.html: Added.
    * Source/WebCore/rendering/RenderInline.cpp:
    (WebCore::RenderInline::generateLineBoxRects const):

    Canonical link: https://commits.webkit.org/307916@main

Identifier: 305413.375@safari-7624-branch